--- a/qtdesigner/mainwindow_3.ui
+++ b/qtdesigner/mainwindow_3.ui
@@ -436,13 +436,7 @@
                 <number>6</number>
                </property>
                <item>
-                <widget class="MyTreeView" name="treeView">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
+                <widget class="QWidget" name="widget" native="true">
                  <property name="minimumSize">
                   <size>
                    <width>250</width>
@@ -454,12 +448,6 @@
                    <width>250</width>
                    <height>16777215</height>
                   </size>
-                 </property>
-                 <property name="selectionBehavior">
-                  <enum>QAbstractItemView::SelectRows</enum>
-                 </property>
-                 <property name="headerHidden">
-                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -475,7 +463,14 @@
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_2">
                <item>
-                <widget class="MyTableView" name="tableView"/>
+                <widget class="QWidget" name="widget_2" native="true">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                </widget>
                </item>
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout">
@@ -7436,18 +7431,6 @@
    </property>
   </action>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>MyTreeView</class>
-   <extends>QTreeView</extends>
-   <header>gui.treeview_model</header>
-  </customwidget>
-  <customwidget>
-   <class>MyTableView</class>
-   <extends>QTableView</extends>
-   <header>gui.tableview_model</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
