--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,30 +1,40 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        {% block head %}
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    {% block head %}
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        {% block styles %}
-            <!-- Bootstrap CSS -->
-            {{ bootstrap.load_css() }}
-        {% endblock %}
+    <!-- Bootstrap CSS -->
+    {{ bootstrap.load_css() }}
+    {% block styles %}{% endblock %}
 
-        <title>{% block title %}{% endblock %}</title>
-        {% endblock %}
-    </head>
-    <body>
-        <!-- Your nav bar -->
-        {% block navbar %}
-        {% endblock navbar %}
+    <title>{% block title %}{% endblock %}</title>
+    {% endblock %}
+  </head>
+  <body>
+    <header>
+      <!-- Your nav bar -->
+      {% block navbar %}{% endblock navbar %}
+    </header>
 
-        <!-- Your page content -->
-        {% block content %}{% endblock %}
+    <main class="main d-flex">
+      <!-- Your side bar -->
+      {% block sidebar %}{% endblock sidebar %}
 
-        {% block scripts %}
-            <!-- Optional JavaScript -->
-            {{ bootstrap.load_js() }}
-        {% endblock %}
-    </body>
+      <!-- Your page content -->
+      {% block content %}{% endblock %}
+    </main>
+
+    <footer>
+      <!-- Your footer -->
+      {% block footer %}{% endblock footer %}
+    </footer>
+
+    {% block scripts %}
+      <!-- Optional JavaScript -->
+      {{ bootstrap.load_js() }}
+    {% endblock %}
+  </body>
 </html>
