--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,16 +1,22 @@
-{% if fields %}
-  <div class="d-flex flex-column align-items-stretch flex-shrink-0 border-right">
-    <a href="/" class="d-flex p-3 link-dark text-decoration-none text-white bg-dark">
-      <span class="fs-5 fw-bold">Fields</span>
-    </a>
-    <div class="list-group list-group-flush border-bottom scrollarea sidebar">
-      {% for field in fields %}
-      <a href="#" class="list-group-item list-group-item-action py-3 lh-tight text-white bg-dark sidebar-item">
-      <div class="d-flex w-100 justify-content-between">
-        <span class="mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
-      </div>
-      </a>
-      {% endfor %}
+<div class="d-flex flex-column align-items-stretch flex-shrink-0 border-right">
+  <!-- <a href="/" class="d-flex p-3 link-dark text-decoration-none text-white bg-dark"> -->
+    <!-- <span class="fs-5 fw-bold">Fields</span> -->
+  </a>
+  <div class="list-group list-group-flush" id="sidebar">
+    {% for field in fields %}
+    <a href="{{ url_for('main.base_field', base_field_id=field.id) }}" class="list-group-item list-group-item-action py-3 lh-tight text-white bg-dark sidebar-item">
+    <div class="d-flex w-100 justify-content-between">
+      <span class="mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
     </div>
+    </a>
+    {% endfor %}
   </div>
-{% endif %}
+</div>
+
+{% block scripts %}
+  <script>
+    function selectListitem(){
+      var a = 0;
+    }
+  </script>
+{% endblock %}
