--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,21 +1,55 @@
 /* * {
-    border: 1px solid blue;
+  border: 1px solid blue;
 } */
 
-.sidebar-item:hover {
-    /* color: red; */
-    border: 1px solid red;
+h1 {
+  padding: 1rem 0;
 }
+
+.sidebar-item {
+  font-size: 0.8rem;
+}
+
+.sidebar-item:hover {
+  /* color: var(--bs-green) !important; */
+  border-width: 1px 0;
+  border-style: solid;
+  border-color: var(--bs-green);
+  margin: -1px 0 0;
+}
+
+.navbar {
+  background-color: var(--bs-green);
+}
+
+.crop-table {
+  width: 50%;
+}
+
+.crop-table td th {
+  width: calc(100% / 5);
+}
+
+.align-right {
+  text-align: right;
+}
+
+#sidebar {
+  height: calc(100vh - 56px);
+  overflow: auto;
+  /* -ms-overflow-style: none;
+  scrollbar-width: none; */
+}
+
+/* #siderbar::-webkit-scrollbar {
+  display: none;
+} */
+
 /* .main {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 } */
 
 /* .container {
-    width: 75%;
+  width: 75%;
 } */
-
-.sidebar {
-    height: 100vh-40px;
-}
-
