--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,36 +2,47 @@
 {% import 'bootstrap5/utils.html' as utils %}
 
 {% block styles %}
-  <link rel="custom stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="custom stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 {% endblock %}
 
 {% block title %}
-  {% if title %}{{ title }} - AgroPlan{% else %}{{ 'AgroPlan' }}{% endif %}
+  {% if title %}{{ title }} | AgroPlan{% else %}{{ 'AgroPlan' }}{% endif %}
 {% endblock %}
 
 {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('main.home') }}">AgroPlan</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-md navbar-dark p-2">
+    <div class="d-flex flex-row">
+      <button type="button" class="navbar-toggler mr-2" data-bs-toggle="offcanvas" data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="false" aria-label="Toggle sidebar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          {% if current_user.is_anonymous %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.login') }}">{{ 'Login' }}</a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">{{ 'Profile' }}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ 'Logout' }}</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
+      <a class="navbar-brand p-1" href="{{ url_for('main.home') }}">AgroPlan</a>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="{{ url_for('main.home') }}" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ url_for('main.preset') }}" class="nav-link">Preset</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        {% if current_user.is_anonymous %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.login') }}">{{ 'Login' }}</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">{{ 'Profile' }}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ 'Logout' }}</a>
+        </li>
+        {% endif %}
+      </ul>
     </div>
   </nav>
 {% endblock %}
