--- a/app/templates/field.html
+++ b/app/templates/field.html
@@ -1,32 +1,39 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-  <h1 class="header">{{ "{prefix:02d}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}</h1>
-  <div class="table-responsive crop-table">
-    <table class="table table-hover table-bordered caption-top">
-      <caption>List of cultivated crops</caption>
-      <thead class="table-dark">
-        <tr>
-          <th>Year</th>
-          <th>Crop-Class</th>
-          <th>Name</th>
-          <th>Area</th>
-          <th>Yield</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for field in base_field.fields %}
-          {% for cultivation in field.cultivations %}
+  <div class="content mx-auto">
+    <h1 class="py-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}</h1>
+    <div class="table-responsive crop-table">
+      <table class="table table-hover table-bordered caption-top">
+        <caption>List of cultivated crops</caption>
+        <thead class="table-dark align-center">
           <tr>
-            <td>{{ field.year }}</td>
-            <td>{{ cultivation.crop_class.value }}</td>
-            <td>{{ cultivation.crop.name }}</td>
-            <td class="align-right">{{ "{area:.2f} ha".format(area=field.area) }}</td>
-            <td class="align-right">{{ "{yield:.0f} dt/ha".format(yield=cultivation.crop_yield) }}</td>
+            <th>Year</th>
+            <th>Class</th>
+            <th>Name</th>
+            <th>Area</th>
+            <th>Yield</th>
+            <th>Actions</th>
           </tr>
+        </thead>
+        <tbody>
+          {% for field in base_field.fields %}
+            {% for cultivation in field.cultivations %}
+            <tr>
+              <td>{{ field.year }}</td>
+              <td>{{ cultivation.crop_class.value }}</td>
+              <td>{{ cultivation.crop.name }}</td>
+              <td class="align-right">{{ "{area:.2f} ha".format(area=field.area) }}</td>
+              <td class="align-right">{{ "{yield:.0f} dt/ha".format(yield=cultivation.crop_yield) }}</td>
+              <td class="table-action">
+                <button type="button" class="btn btn-primary">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button>
+              </td>
+            </tr>
+            {% endfor %}
           {% endfor %}
-        {% endfor %}
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
   </div>
 {% endblock %}
