Update sidebar to be all-time offcanvas

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block app_content %}
+  <div class="align-left">
   {% for field in fields %}
     {% include '_field.html' %}
   {% endfor %}
+  </div>
 {% endblock %}
