--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block navbar %}
-  <nav class="navbar navbar-expand-md navbar-dark p-2">
+  <nav class="navbar navbar-expand-lg navbar-dark p-2">
     <div class="d-flex flex-row">
-      <button type="button" class="navbar-toggler mr-2" data-bs-toggle="offcanvas" data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="false" aria-label="Toggle sidebar">
+      <button type="button" class="navbar-toggler-lg me-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions" aria-expanded="False" aria-label="Toggle sidebar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand p-1" href="{{ url_for('main.home') }}">AgroPlan</a>
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container-fluid bg-light">
+  <div class="container-lg bg-light p-2">
     {% with message = utils.render_messages() %}
     {% if message %}
       <div class="alert alert-info" role="alert">{{ message }}</div>
