--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,9 +1,10 @@
-<!-- <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel"> -->
-  <div class="navbar-offcanvas show" id="sidebarNav">
+<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptions">
+  <div class="offcanvas-header d-flex justify-content-between bg-dark">
+    <h5 class="m-0 text-light" id="offcanvasWithBothOptionsLabel">Fields</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body p-0 bg-dark">
     <div class="d-flex flex-column align-items-stretch flex-shrink-0 border-right">
-      <!-- <a href="/" class="d-flex p-3 link-dark text-decoration-none text-white bg-dark">
-        <span class="fs-5 fw-bold">Fields</span>
-      </a> -->
       <div class="list-group list-group-flush" id="sidebar">
 
         {% for field in fields %}
@@ -16,8 +17,9 @@
 
       </div>
     </div>
+    <!-- </div> -->
   </div>
-<!-- </div> -->
+</div>
 
 {% block scripts %}
     <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
