--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -23,7 +23,7 @@
         <!-- Your side bar -->
         {% block sidebar %}{% endblock sidebar %}
 
-        <main class="col h-100 overflow-auto">
+        <main class="col overflow-auto">
           <!-- Your page content -->
           {% block content %}{% endblock %}
         </main>
