--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,11 +1,7 @@
-<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptions">
-  <div class="offcanvas-header d-flex justify-content-between bg-dark">
-    <h5 class="m-0 text-light" id="offcanvasWithBothOptionsLabel">Fields</h5>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body p-0 bg-dark">
-    <div class="d-flex flex-column align-items-stretch flex-shrink-0 border-right">
-      <div class="list-group list-group-flush" id="sidebar">
+<nav class="navbar navbar-expand-lg navbar-dark p-0 align-items-start">
+  <div class="navbar-collapse collapse" id="sidebarNav">
+    <div class="navbar-nav" id="sidebar">
+      <div class="list-group list-group-flush">
 
         {% for field in fields %}
           <a href="{{ url_for('main.base_field', base_field_id=field.id) }}" class="list-group-item list-group-item-action py-3 lh-tight text-white bg-dark sidebar-item">
@@ -17,17 +13,5 @@
 
       </div>
     </div>
-    <!-- </div> -->
   </div>
-</div>
-
-{% block scripts %}
-    <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script>
-    $(document).ready(function() {
-      $('[data-bs-toggle=offcanvas]').click(function() {
-        $('.row-offcanvas').toggleClass('active');
-      });
-    });
-  </script> -->
-{% endblock %}
+</nav>
