--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block navbar %}
-  <nav class="navbar navbar-expand-lg navbar-dark p-2">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark p-2">
     <div class="d-flex flex-row">
       <button class="navbar-toggler" type="button" data-bs-toggle="sidebarCollapse" aria-expanded="false" aria-label="Toggle sidebar">
         <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container-lg bg-light p-2">
+  <div class="container-fluid content px-4 py-2">
     {% with message = utils.render_messages() %}
     {% if message %}
       <div class="alert alert-info" role="alert">{{ message }}</div>
