--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark p-0 align-items-start">
+<nav class="navbar navbar-expand-lg navbar-dark p-0 align-items-start bg-light" id="sidebar">
   <div class="navbar-collapse collapse" id="sidebarNav">
-    <div class="navbar-nav" id="sidebar">
+    <!-- <div class="navbar-nav"> -->
       <div class="list-group list-group-flush">
 
         {% for field in fields %}
-          <a href="{{ url_for('main.base_field', base_field_id=field.id) }}" class="list-group-item list-group-item-action py-3 lh-tight text-white bg-dark sidebar-item">
+          <a href="{{ url_for('main.base_field', base_field_id=field.id) }}" class="list-group-item list-group-item-action py-3 lh-tight text-white bg-dark sidebar-item" id="{{ field.id }}">
           <div class="d-flex w-100 justify-content-between">
             <span class="mb-1">{{ "{prefix:02d}-{suffix} {name}".format(prefix=field.prefix, suffix=field.suffix, name=field.name) }}</span>
           </div>
@@ -12,18 +12,9 @@
         {% endfor %}
 
       </div>
-    </div>
+    <!-- </div> -->
   </div>
 </nav>
 
-{% block scripts %}
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-  <script>
-    $(document).ready(function() {
-      $('[data-bs-toggle=sidebarCollapse]').click(function() {
-        $('#sidebarNav').toggleClass('show');
-        $(this).attr('aria-expanded', function(i, attr) {return attr == 'true' ? 'false': 'true'});
-      });
-    });
-  </script>
-{% endblock %}
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
